test/parser/call_expr.0.stderr
<source>:11:8: error: too many arguments to function 'fn foo() -> void'
   11 |     foo(5);
      |        ^
<source>:13:8: error: too few arguments to function 'fn bar(i32) -> void'
   13 |     bar();
      |        ^
<source>:17:6: error: 'x' cannot be used as a function
   17 |     x();
      |     ~^
<source>:19:6: error: expression cannot be used as a function
   19 |     5();
      |     ~^
<source>:22:9: error: mismatched types; expected 'i32', found 'bool'
   22 |     bar(true);
      |         ~~~~
<source>:28:8: error: too many arguments to function 'fn baz(i32, i32) -> void'
   28 |     baz(5, 8, 9);
      |        ^
<source>:30:8: error: too few arguments to function 'fn baz(i32, i32) -> void'
   30 |     baz();
      |        ^
